2007-04-26  Stefan Jahn  <stefan@lkcc.org>

	* differentiate.cpp: Added sinc() differentiator.

	* evaluate.cpp: Fixed calculation of arsech().  Using new
	functions from complex and vector class.

	* parse_netlist.y: Fixed operator precedences.

	* evaluate.cpp: Allowing additionally complex arguments in ?:
	operator.  Necessary for e.g. sqrt().

	* equation.cpp: Modified printing functions for logical
	operations.

2007-04-25  Stefan Jahn  <stefan@lkcc.org>

	* differentiate.cpp: Added differentiation for the new '?:'
	operation.

	* scan_netlist.l, parse_netlist.y: Allowing '?:' operations as
	well as <, >, <=, >=, ==, !=, !, && and || in equations.

	* evaluate.cpp: Implemented comparison operators as well as some
	important boolean operations.

	* equation.cpp: Added the boolean data type with all its
	implications.

2007-04-24  Stefan Jahn  <stefan@lkcc.org>

	* differentiate.cpp: Added diferentiation formulas for arsech()
	and arcosech(), also added simplifier for immediate square
	expressions.

2007-04-23  Stefan Jahn  <stefan@lkcc.org>

	* evaluate.cpp: Added arcsec(), arccosec(), arsech(), arcosech()
	and length() functions to the equation solver.

	* vector.cpp: Fixed calculation of variance().

2007-04-18  Stefan Jahn  <stefan@lkcc.org>

	* qucsdefs.h (qucs_definition_available): Added properties of new
	equation defined device.

	* input.cpp: Storing appropriate environment pointer in each
	instantiated component.

	* equation.cpp: Added some more functionality necessary for the
	new equation defined device.

	* circuit.h (class circuit): Environments can now be stored in
	components.

2007-04-15  Stefan Jahn  <stefan@lkcc.org>

	* qucsdefs.h (qucs_definition_available): Added parameters
	for the new exponential current and voltage source.

	* vector.cpp: Fixed implementation of variance().  And thereby
	the one of stddev().

2007-04-14  Stefan Jahn  <stefan@lkcc.org>

	* differentiate.h (class differentiate): Added many derivatative